--- a/homepage/home/templates/home/home.html
+++ b/homepage/home/templates/home/home.html
@@ -7,11 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'main.css' %}">
+    <style>
+        body {
+            background-color: black;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
 
-    {% block main %}{% endblock main %}
+    <div id="shortcuts">
+        {% for shortcut in shortcuts %}
+        <a class="shortcut" href="{{ shortcut.url }}" title="{{ shortcut.name }}">
+            <img src="{{ shortcut.icon }}" alt="{{ shortcut.name }}">
+        </a>
+        {% endfor %}
+    </div>
+
+    <div id="bookmarks">
+        {% for category in bookmark_categories %}
+            <div class="category">
+                <h5 class="title">{{ category.name }}</h5>
+
+                {% for sub_category in bookmark_sub_categories %}
+
+                    {% if sub_category.category == category %}
+                        <h6>{{ sub_category.name }}</h6>
+                        {% for bookmark in bookmarks %}
+                            {% if bookmark.sub_category == sub_category %}
+                            <a class="bookmark" href="{{ shortcut.url }}" title="{{ bookmark.name }}">
+                                {{ bookmark.name }}
+                            </a>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+
+                {% endfor %}
+
+            </div>
+        {% endfor %}
+    </div>
+
     <a href="{% url 'logout' %}">Logout</a>
+
     <script src="{% static 'main.js' %}"></script>
 </body>
 </html>
