--- a/homepage/home/templates/home/home.html
+++ b/homepage/home/templates/home/home.html
@@ -15,38 +15,11 @@
     </style>
 </head>
 <body>
+    {% include 'current_weather.html' %}
+    {% include 'shortcuts.html' %}
+    {% include 'bookmarks.html' %}
 
-    <div id="shortcuts">
-        {% for shortcut in shortcuts %}
-        <a class="shortcut" href="{{ shortcut.url }}" title="{{ shortcut.name }}">
-            <img src="{{ shortcut.icon }}" alt="{{ shortcut.name }}">
-        </a>
-        {% endfor %}
-    </div>
 
-    <div id="bookmarks">
-        {% for category in bookmark_categories %}
-            <div class="category">
-                <h5 class="title">{{ category.name }}</h5>
-
-                {% for sub_category in bookmark_sub_categories %}
-
-                    {% if sub_category.category == category %}
-                        <h6>{{ sub_category.name }}</h6>
-                        {% for bookmark in bookmarks %}
-                            {% if bookmark.sub_category == sub_category %}
-                            <a class="bookmark" href="{{ shortcut.url }}" title="{{ bookmark.name }}">
-                                {{ bookmark.name }}
-                            </a>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-
-                {% endfor %}
-
-            </div>
-        {% endfor %}
-    </div>
 
     <a href="{% url 'logout' %}">Logout</a>
 
