add search engines

--- a/homepage/home/templates/home/home.html
+++ b/homepage/home/templates/home/home.html
@@ -17,6 +17,7 @@
 <body>
     {% include 'current_weather.html' %}
     {% include 'shortcuts.html' %}
+    {% include 'search_engines.html' %}
     {% include 'bookmarks.html' %}
 
 
