--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -6,16 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'main.css' %}">
     <style>
         body {
             background-color: black;
             color: #fff;
         }
+        /* ::-webkit-scrollbar {
+            display: none;
+        } */
+
+        ::-webkit-scrollbar {
+            width: 3px;
+            background-color: #F5F5F5;
+        }
+
+        ::-webkit-scrollbar-track {
+            background-color: red;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: red;
+            background-image: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .2) 25%,
+                                                    transparent 25%,
+                                                    transparent 50%,
+                                                    rgba(255, 255, 255, .2) 50%,
+                                                    rgba(255, 255, 255, .2) 75%,
+                                                    transparent 75%,
+                                                    transparent)
+        }
     </style>
 </head>
+    {% include 'navbar.html' %}
     {% block main %}{% endblock main %}
-    <a href="{% url 'logout' %}">Logout</a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
 </body>
 </html>
